cabal-version:      2.4
name:               UrabeParserGenerator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:

common common-language
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    NamedFieldPuns

common common-options
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

library
  import:          common-language
  import:          common-options
  hs-source-dirs:  src
  build-depends:
    base
    ,text
    ,containers
    ,record-dot-preprocessor
    ,nonempty-containers
  exposed-modules:
    Bnf

extra-source-files: CHANGELOG.md

executable UrabeParserGenerator
  import:           common-language
  import:           common-options
  ghc-options:      -threaded -rtsopts
  default-language: Haskell2010
  hs-source-dirs:   exe
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0

test-suite test
  import:         common-language
  import:         common-options
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base
    , UrabeParserGenerator
    , hspec
    , hspec-core
